# socli

./: .gitignore  README.md  dprod.jsonld  pyproject.toml
src/socli/: main.py
src/socli/operations/: __init__.py  http.py  rdf.py  solid.py
src/socli/user/: __init__.py  auth.py  config.py  database.py
src/socli/utils/: __init__.py  utils.py
