[project]
name = "socli"
version = "0.0.1"
description = "A command-line interface for Community Solid Server (CSS) authentication and RDF data management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=24.1.0",
  "click>=8.2.1",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pyserde>=0.24.0",
  "rdflib>=7.1.4",
  "requests>=2.32.4",
  "serde>=0.9.0",
  "solidclientcredentials>=1.0.3",
  "tomli>=2.2.1",
  "tomli-w>=1.2.0",
  "rich>=13.7.1",
]

[dependency-groups]
dev = ["basedpyright>=1.31.0", "ty>=0.0.1a14"]

[project.scripts]
socli = "socli.main:cli"

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"
